--- a/ingest_data.ipynb
+++ b/ingest_data.ipynb
@@ -21,7 +21,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.base.Connection at 0xffff98123010>"
+       "<sqlalchemy.engine.base.Connection at 0xffff84356f50>"
       ]
      },
      "execution_count": 2,
